Kubernetes/Ingress/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-home-service
spec:
  selector:
    app: apple-home
  ports:
  - name: http
    port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: apple-mobile-service
spec:
  selector:
    app: apple-mobile
  ports:
  - name: http
    port: 80
    targetPort: 80
